--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/14/2020 11:04:00 AM</p>
+    <p class="lastupdate">09/14/2020 11:09:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,15 +50,15 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">70.4&#176;F</td>
+        <td class="data">71.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">70.4&#176;F</td>
+        <td class="data">71.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">70.4&#176;F</td>
+        <td class="data">71.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
@@ -66,15 +66,15 @@
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">52%</td>
+        <td class="data">51%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.971 inHg (-0.007)</td>
+        <td class="data">29.971 inHg (-0.004)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph NNE (22&#176;)</td>
+        <td class="data">1 mph NW (315&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="11:03:41 AM">
-            70.4</span><br/>
+          <span title="11:08:29 AM">
+            71.1</span><br/>
           <span title="07:19:55 AM">
             49.2</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="11:03:41 AM" class="hival">
-            70.4</span>
+          <span title="11:08:29 AM" class="hival">
+            71.1</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="01:52:32 PM (Sunday)" class="hival">
@@ -271,8 +271,8 @@
         <td class="data new_row hilo_day">
           <span title="07:40:53 AM">
             95</span><br/>
-          <span title="11:03:19 AM">
-            52</span>
+          <span title="11:08:27 AM">
+            51</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:40:53 AM (Monday)">
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">98%</td>
+      <td class="data">90%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">12 days, 20 hours, 17 minutes</td>
+      <td class="data">12 days, 20 hours, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">12 days, 20 hours, 17 minutes</td>
+      <td class="data">12 days, 20 hours, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
