--- a/statistics.html
+++ b/statistics.html
@@ -36,7 +36,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/14/2020 11:59:00 AM</p>
+    <p class="lastupdate">09/14/2020 12:04:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -84,8 +84,8 @@
         <tr>
           <td class="label">Outside Temperature</td>
           <td class="units">&#176;F</td>
-          <td class="data new_row">79.6<br/>
-            <span class="timestamp">11:58:31 AM</span><br/>
+          <td class="data new_row">80.9<br/>
+            <span class="timestamp">12:03:59 PM</span><br/>
             49.2<br/>
             <span class="timestamp">07:19:55 AM</span>
           </td>
@@ -113,8 +113,8 @@
         <tr>
           <td class="label">Heat Index</td>
           <td class="units">&#176;F</td>
-          <td class="data new_row">79.6<br/>
-            <span class="timestamp">11:58:31 AM</span>
+          <td class="data new_row">80.9<br/>
+            <span class="timestamp">12:03:59 PM</span>
           </td>
           <td class="data new_row">90.0<br/>
             <span class="timestamp">01:52:32 PM (Sunday)</span>
@@ -335,7 +335,7 @@
           </td>
           <td class="data new_row">
             0<br/>
-            7
+            6
           </td>
           <td class="data new_row">
             1<br/>
